# mkdocs-ghpages

./: .gitignore  404.html  README.md  hooks.py  index.html  main.go  mkdocs  mkdocs.yaml  objects.inv  pyinstall.sh  pyproject.toml  sitemap.xml
docs/: gh-pages.md  index.md
docs/graphs/: mermaid.md
docs/notebooks/: 10_example.ipynb  20_advanced_examples.ipynb
docs/reference/: python-example.md
getting-started/: index.html
gh-pages/: index.html
graphs/mermaid/: index.html
notebooks/10_example/: index.html
notebooks/20_advanced_examples/: index.html
reference/api/: index.html
reference/cli/: index.html
reference/python-example/: index.html
reference/simple-pymath-api/: index.html
search/: search_index.json
site/: 404.html  sitemap.xml
site/notebooks/20_advanced_examples/: index.html
site/search/: search_index.json
src/example_python_reference/: calculator.py
